# ws_pyg_24_07

./: .gitignore  LICENSES_THIRD_PARTY.md  README.md  als_classification.py  als_classification_inference.py  als_classification_simple.py  als_classification_simple_v2.py  compare_models.py  model_parameters.csv  pn2_classifier.py  pyproject.toml  tree_classification.py
als_classification/models/: BuildingPointNet.py  SimplePointNet.py
src/: als_classification.py  als_classification_simple.py  als_classification_simple_v2.py
tr3d/: pn2_regressor.py  pointcloud_dataset.py
util/: ClassificationLabels.py  PointCloudDataset.py  PointNet2.py  las_util.py
